<resources>
    <string name="app_name">Tubes01</string>
    <string name="header_main_message">Makan Apa</string>
    <string name="body_main_message">Makan Apa\nHari ini?</string>
    <string name="button_main">Cari</string>
    <string name="tv_menu_desc">Menu</string>
    <string name="tv_menu_makanan">Nama Makanan</string>
    <string name="tv_menu_deskripsi">Deskripsi</string>
    <string name="tv_menu_tag">Tag : </string>
    <string name="tv_menu_bahan">Bahan : </string>
    <string name="tv_menu_langkah_memasak">Langkah memasak :</string>
    <string name="tv_menu_resto">Tersedia di Resto : </string>
    <string name="btn_nav_menu">Menu</string>
    <string name="btn_nav_home">Home</string>
    <string name="btn_nav_setting">Setting</string>
    <string name="btn_nav_search">Cari</string>
    <string name="btn_nav_exit">Exit</string>
    <string name="openDrawer">Hamburger open</string>
    <string name="closeDrawer">Hamburger close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>