<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/header_main_tv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_box_height"
            android:gravity="center"
            android:textSize="@dimen/default_fontsize"
            android:text="@string/header_main_message"
        />

        <TextView
            android:id="@+id/main_body_tv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_msg_height"
            android:gravity="center"
            android:textSize="@dimen/default_fontsize"
            android:text="@string/body_main_message"
            android:layout_below="@id/header_main_tv"
        />
        
        <Button
            android:id="@+id/randomizer_btn"
            android:layout_width="@dimen/btn_width"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_body_tv"
            android:layout_centerInParent="true"
            android:text="@string/button_main"
            android:background="@color/btnDark"
            android:textColor="@color/white"
        />
        
    </RelativeLayout>

</FrameLayout>