<?xml version="1.0" encoding="utf-8"?>
<!--<FrameLayout -->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    >-->
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_height="wrap_content"
android:layout_width="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:isScrollContainer="true"
       >

        <TextView
            android:id="@+id/tv_menu_desc"
            android:layout_width="match_parent"
            android:layout_height="@dimen/box_item_height"
            android:gravity="center_vertical"
            android:text="@string/tv_menu_desc"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/tv_name_menu">
        </TextView>

        <EditText
            android:id="@+id/et_input_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/et_input_height"
            android:gravity="center"
            android:hint="Nama Makanan">
        </EditText>

        <TextView
            android:id="@+id/tv_menu_deskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_menu_deskripsi"
            android:textColor="@color/black"
            android:layout_margin="@dimen/margin_frag_tv_menu_desc"
            android:textSize="@dimen/tv_name_desc_font">
        </TextView>

        <TextView
            android:id="@+id/tv_menu_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_menu_tag"
            android:textColor="@color/black"
            android:layout_margin="@dimen/margin_frag_tv_menu_desc"
            android:textSize="@dimen/tv_name_desc_font">
        </TextView>
        <EditText
            android:id="@+id/et_input_tag"
            android:layout_width="match_parent"
            android:layout_height="@dimen/et_input_height"
            android:hint="Tags, e.g. Korean, Western, Deep Fry">
        </EditText>

        <TextView
            android:id="@+id/tv_menu_bahan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_menu_bahan"
            android:textColor="@color/black"
            android:layout_margin="@dimen/margin_frag_tv_menu_desc"
            android:textSize="@dimen/tv_name_desc_font">
        </TextView>
        <EditText
            android:id="@+id/et_input_bahan"
            android:layout_width="match_parent"
            android:layout_height="@dimen/et_input_height"
            android:hint="Bahan">
        </EditText>

        <TextView
            android:id="@+id/tv_menu_langkah_memasak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_menu_langkah_memasak"
            android:textColor="@color/black"
            android:layout_margin="@dimen/margin_frag_tv_menu_desc"
            android:textSize="@dimen/tv_name_desc_font">
        </TextView>
        <EditText
            android:id="@+id/et_input_langkah"
            android:layout_width="match_parent"
            android:layout_height="@dimen/et_input_height"
            android:hint="">
        </EditText>

        <TextView
            android:id="@+id/tv_menu_resto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_menu_resto"
            android:textColor="@color/black"
            android:layout_margin="@dimen/margin_frag_tv_menu_desc"
            android:textSize="@dimen/tv_name_desc_font">
        </TextView>
        <EditText
            android:id="@+id/et_input_resto"
            android:layout_width="match_parent"
            android:layout_height="@dimen/et_input_height"
            android:hint="Restaurant abc">
        </EditText>

        <Button
            android:id="@+id/btn_create"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/et_input_height"
            android:text="Tambahkan">
        </Button>

    </LinearLayout>
</ScrollView>
<!--</FrameLayout>-->